syntax = "proto3";

package buildbarn.configuration.bb_remote_asset.fetch;

import "google/rpc/status.proto";
import "pkg/proto/configuration/grpc/grpc.proto";
import "pkg/proto/configuration/http/http.proto";

option go_package = "github.com/buildbarn/bb-remote-asset/pkg/proto/configuration/bb_remote_asset/fetch";

message FetcherConfiguration {
  // Formerly used to specify caching fetcher, this is now implied by
  // presence of asset store configuration in the main asset store
  // config
  reserved 1;

  oneof backend {
    // Downloads blobs over HTTP and place them into a CAS for retrieval over
    // REv2 ReadBlobs requests.
    HttpFetcherConfiguration http = 2;

    // Returns a given error for all requests, can be wrapped by
    // CachingFetcher for a Push/Fetch service without any server side
    // downloads.
    //
    // Note that in jsonnet configuration, 'error' will need to be in
    // quotes to avoid collision with a protected keyword
    google.rpc.Status error = 3;

    // Downloads blobs or directories using actions run on remote
    // execution workers.
    // Requires the `resource_type` qualifier to be set, with support
    // for the values `application/octet-stream` and `application/x-git`
    // currently.
    //
    // The worker will require access to `wget` and `git` to fully
    // support this fetcher.
    RemoteExecutionFetcherConfiguration remote_execution = 4;
  }

  message HttpFetcherConfiguration {
    // Formerly used to specify CAS
    reserved 1;

    // Formerly used to specify a list of instance names permitted to upload to
    // the CAS
    reserved 2;

    // Optional: Options to be used by the HTTP client.
    buildbarn.configuration.http.ClientConfiguration client = 3;
  }

  message RemoteExecutionFetcherConfiguration {
    buildbarn.configuration.grpc.ClientConfiguration execution_client = 2;
  }
}
